<resources>
    <string name="app_name">MVP_MobilePhone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_title">Title</string>
    <string name="tab_item">Item</string>

    <string name="mobile_name">Mobile Name</string>
    <string name="mobile_brand">Brand</string>
    <string name="mobile_description">Description</string>
    <string name="mobile_price">Price</string>
    <string name="mobile_rating">Rating</string>

    <string name="success">Load data successful.</string>
    <string name="image_success">Load Image success.</string>
    <string name="connection_error">Cannot load data.</string>
    <string name="null_data">Data not found.</string>

</resources>
