<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.MobileDetailActivity">

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/detail_viewpager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_pager_image_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mobile_name">
    </androidx.viewpager.widget.ViewPager>

    <TextView
            android:id="@+id/mobile_name"
            android:layout_width="@dimen/default_width_0"
            android:layout_height="wrap_content"
            android:text="@string/mobile_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/head_font_size"
            android:layout_marginStart="@dimen/default_margin_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_viewpager"
            app:layout_constraintBottom_toTopOf="@id/mobile_description"/>

    <TextView
            android:id="@+id/mobile_brand"
            android:layout_width="@dimen/default_width_0"
            android:layout_height="wrap_content"
            android:text="@string/mobile_brand"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="@dimen/default_margin_10"
            app:layout_constraintStart_toEndOf="@id/mobile_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_viewpager"
            app:layout_constraintBottom_toTopOf="@id/mobile_description"/>

    <TextView
            android:id="@+id/mobile_description"
            android:layout_width="@dimen/default_width_0"
            android:layout_height="wrap_content"
            android:text="@string/mobile_description"
            app:layout_constraintTop_toBottomOf="@id/mobile_name"
            app:layout_constraintStart_toStartOf="@+id/mobile_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/default_margin_20"
            />


</androidx.constraintlayout.widget.ConstraintLayout>