<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/item_card"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/item_card_margin_top"
        android:layout_marginStart="@dimen/item_card_margin_left"
        android:layout_marginEnd="@dimen/item_card_margin_right"
        android:layout_marginBottom="@dimen/item_card_margin_bottom"
        android:background="@drawable/layout_bg">

    <ImageView
            android:id="@+id/list_mobile_image"
            android:layout_width="@dimen/item_card_image_width"
            android:layout_height="@dimen/item_card_image_height"
            android:layout_margin="@dimen/item_card_image_margin"
            android:scaleType="centerCrop"
            tools:background="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/list_mobile_name"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/list_mobile_name"
            android:layout_width="@dimen/item_card_scalable_text_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_card_title_margin_start"
            app:layout_constraintTop_toTopOf="@id/list_mobile_image"
            app:layout_constraintStart_toEndOf="@+id/list_mobile_image"
            app:layout_constraintBottom_toTopOf="@id/list_mobile_description"
            app:layout_constraintEnd_toStartOf="@+id/favourite_button"
            android:ellipsize="end"
            android:lines="@integer/max_lines_1"
            tools:text="@string/mobile_name"
            android:textColor="@color/black"
            android:textSize="@dimen/head_font_size" />

    <TextView
            android:id="@+id/list_mobile_description"
            android:layout_width="@dimen/item_card_scalable_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/list_mobile_name"
            app:layout_constraintTop_toBottomOf="@id/list_mobile_name"
            app:layout_constraintStart_toEndOf="@+id/list_mobile_image"
            app:layout_constraintEnd_toEndOf="@id/favourite_button"
            android:ellipsize="end"
            android:lines="@integer/max_lines_2"
            tools:text="@string/mobile_description"
            android:textSize="@dimen/detail_font_size" />

    <TextView
            android:id="@+id/list_mobile_price"
            tools:text="@string/mobile_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="@id/list_mobile_description"
            app:layout_constraintTop_toBottomOf="@id/list_mobile_description"
            app:layout_constraintStart_toEndOf="@+id/list_mobile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            android:ellipsize="end"
            android:lines="@integer/max_lines_1"
            android:textSize="@dimen/detail_font_size"/>

    <TextView
            android:id="@+id/list_mobile_rating"
            tools:text="@string/mobile_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/list_mobile_description"
            app:layout_constraintEnd_toEndOf="@id/favourite_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:ellipsize="end"
            android:lines="@integer/max_lines_1"
            android:textSize="@dimen/detail_font_size"/>

    <Button
            android:id="@+id/favourite_button"
            android:layout_width="@dimen/favorite_button_size"
            android:layout_height="@dimen/favorite_button_size"
            android:layout_marginEnd="@dimen/item_card_button_margin_end"
            android:background="@drawable/heart_icon"
            app:layout_constraintTop_toTopOf="@id/list_mobile_image"
            app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>