<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/favorite_card"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/item_card_margin_top"
        android:layout_marginStart="@dimen/item_card_margin_left"
        android:layout_marginEnd="@dimen/item_card_margin_right"
        android:layout_marginBottom="@dimen/item_card_margin_bottom"
        android:background="@drawable/layout_bg">

    <ImageView
            android:id="@+id/favorite_mobile_image"
            android:layout_width="@dimen/item_card_image_width"
            android:layout_height="@dimen/item_card_image_height"
            android:layout_margin="@dimen/item_card_image_margin"
            android:scaleType="centerCrop"
            tools:background="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/favorite_mobile_name"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/favorite_mobile_name"
            android:layout_width="@dimen/default_width_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_card_title_margin_start"
            app:layout_constraintTop_toTopOf="@id/favorite_mobile_image"
            app:layout_constraintStart_toEndOf="@+id/favorite_mobile_image"
            app:layout_constraintBottom_toTopOf="@id/favorite_mobile_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:ellipsize="end"
            android:lines="@integer/max_lines_1"
            tools:text="@string/mobile_name"
            android:textColor="@color/black"
            android:textSize="@dimen/head_font_size"/>

    <TextView
            android:id="@+id/favorite_mobile_price"
            tools:text="@string/mobile_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/favorite_mobile_name"
            app:layout_constraintTop_toBottomOf="@id/favorite_mobile_name"
            app:layout_constraintStart_toEndOf="@+id/favorite_mobile_image"

            android:ellipsize="end"
            android:lines="@integer/max_lines_1"
            android:textSize="@dimen/detail_font_size"/>

    <TextView
            android:id="@+id/favorite_mobile_rating"
            tools:text="@string/mobile_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/favorite_mobile_name"
            app:layout_constraintBottom_toBottomOf="@id/favorite_mobile_image"
            android:ellipsize="end"
            android:lines="@integer/max_lines_1"
            android:textSize="@dimen/detail_font_size"/>


</androidx.constraintlayout.widget.ConstraintLayout>